--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,10 @@ body {
     border-radius: 10px;
     margin-top: 20px;
   }
+
+  @media(max-width: 992px){
+    .box{
+      padding: 15px;
+      margin: 10%;
+    }
+  }
