--- a/yes_style.css
+++ b/yes_style.css
@@ -28,3 +28,10 @@ body {
     max-width: 500px; 
     height: auto; 
 }
+
+  @media(max-width: 992px){
+    .box{
+      padding: 15px;
+      margin: 10%;
+    }
+  }
