--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
     font-size: 1.5em;
     padding: 10px 20px;
     margin-right: 10px;
-    background-color: #4caf50;
+    background-color: #a41afa;
     color: white;
     border: none;
     border-radius: 5px;
@@ -43,7 +43,7 @@ body {
   .no-button {
     font-size: 1.5em;
     padding: 10px 20px;
-    background-color: #f44336;
+    background-color: #264ec5;
     color: white;
     border: none;
     border-radius: 5px;
