--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,13 @@ body {
     background-color: #f35ceb;
     border-radius: 20px;
     padding: 20px;
+    box-shadow: 5px 5px 10px 5px rgba(0.5, 0.5, 0.5, 0.5);
   }
   
   h1 {
     font-size: 2.5em;
     color: #ffc5fb;
+    -webkit-text-stroke: 1px #000000;
   }
   
   .buttons {
