--- a/yes_style.css
+++ b/yes_style.css
@@ -17,11 +17,13 @@ body {
     background-color: #f35ceb;
     border-radius: 20px;
     padding: 20px;
+    box-shadow: 5px 5px 10px 5px rgba(0.5, 0.5, 0.5, 0.5);
 }
 
 .header_text {
     font-size: 3em;
     color: #ffc5fb;
+    -webkit-text-stroke: 1px #000000;
 }
 
 .gif_container img {
