--- a/styles.css
+++ b/styles.css
@@ -59,9 +59,13 @@ body {
     margin-top: 20px;
   }
 
-  @media(max-width: 992px){
+ @media(max-width: 992px){
     .box{
       padding: 15px;
-      margin: 10%;
+      margin: 5%;
+    }
+
+    h1{
+      font-size: 1.5em;
     }
   }
