--- a/yes_style.css
+++ b/yes_style.css
@@ -31,9 +31,13 @@ body {
     max-width: 500px; 
     height: auto; 
 }
-@media(max-width: 992px){
+  @media(max-width: 992px){
     .box{
       padding: 15px;
-      margin: 10%;
+      margin: 5%;
+    }
+
+    .header_text{
+      font-size: 1.5em;
     }
   }
