--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5)  
   }
   
   .no-button {
@@ -50,6 +51,7 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5)
   }
   
   .gif_container img {
